--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
         <title>{% block title %}{% endblock %}</title>
         <!-- Bootstrap CSS link -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        
     </head>
 
     <body>
@@ -13,6 +14,8 @@
             <ul>
                 <li><a href="{{ url_for('listdrivers') }}">List Drivers</a></li>
                 <li><a href="{{ url_for('listcourses') }}">List Courses</a></li>
+                <li><a href="{{ url_for('listruns') }}">List Runs</a></li>
+                <li><a href="{{ url_for('overallresult') }}">Overall Result</a></li>
             </ul>
           </nav>
           <section class="content">
