Finish add driver function

--- a/templates/addnewdriver.html
+++ b/templates/addnewdriver.html
@@ -16,7 +16,7 @@
 
         <div class="col-6">
           <label for="inputAge" class="form-label">Age</label>
-          <input type="text" class="form-control" id="inputAge" name="age" required>
+          <input type="text" class="form-control" id="inputAge" name="age">
         </div>
 
         <div class="col-md-6">
