--- a/templates/message.html
+++ b/templates/message.html
@@ -13,11 +13,8 @@
             <h1> Message Page</h1>
 
             <ul>
-                <li><a href="{{ url_for('update') }}">Back to Update Page</a></li>
-                <!-- <li><a href="{{ url_for('search') }}">Search</a></li>
-                <li><a href="{{ url_for('update') }}">Update</a></li>
-                <li><a href="{{ url_for('home') }}">Home</a></li>
-                 -->
+                <li><a href="{{ url_for('update') }}">Update Page</a></li>
+                <li><a href="{{ url_for('add') }}">Add Page</a></li>
             </ul>
           </nav>
           <section class="content">
