--- a/templates/admin.html
+++ b/templates/admin.html
@@ -10,17 +10,35 @@
 
     <body>
          <nav>
-            <h1>Bankside Rakaia Motorkhana Mavens - Competition event - Admin Page</h1>
+            <h1 class="text-center">Bankside Rakaia Motorkhana Mavens</h1>
+            <h2 class="text-center"> Competition event - Admin Page </h2>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+              <div class="container">
+                <div class="collapse navbar-collapse" >
+                  <ul class="navbar-nav  mx-auto">
+                    <li class="nav-item  me-5">
+                      <a class="nav-link  active" aria-current="page" href="{{ url_for('home') }}">Home</a>
+                    </li>
+                    <li class="nav-item  me-5">
+                      <a  class="nav-link" href="{{ url_for('listjuniordrivers') }}">List Junior Drivers</a>
+                    </li>
+                    <li class="nav-item  me-5">
+                      <a class="nav-link" href="{{ url_for('search') }}">Search</a>
+                    </li>
+                    <li class="nav-item  me-5">
+                      <a class="nav-link" href="{{ url_for('update') }}">Update</a>
+                    </li>
+                    <li class="nav-item  me-5">
+                      <a class="nav-link" href="{{ url_for('add') }}">Add A New Driver</a>
+                    </li>
+                  
+                 
+                   </ul>
+                </div>
+              </div>
+            </nav>
 
-            <ul>
-                <li><a href="{{ url_for('listjuniordrivers') }}">List Junior Drivers</a></li>
-                <li><a href="{{ url_for('search') }}">Search</a></li>
-                <li><a href="{{ url_for('update') }}">Update</a></li>
-                <li><a href="{{ url_for('add') }}">Add A New Driver</a></li>
-                <li><a href="{{ url_for('home') }}">Home</a></li>
-                
-                
-            </ul>
+         
           </nav>
           <section class="content">
             <header>
