--- a/templates/juniordriverlist.html
+++ b/templates/juniordriverlist.html
@@ -1,9 +1,11 @@
 {% extends "admin.html" %}
 {% block content %}
 
-<h2>Junior Driver List</h2>
+<h2 class="container mt-4">
+    <span class="badge bg-secondary">Junior Driver List</span>
+</h2>
 
-<div class="container">
+<div class="container mt-3">
     <table class="table table-striped">
         <tr>
             <th scope="col">Driver</th>
