--- a/templates/addnewdriver.html
+++ b/templates/addnewdriver.html
@@ -1,9 +1,11 @@
 {% extends "admin.html" %}
 {% block content %}
 
-<h2>Add Driver</h2>
+<h2 class="container mt-4">
+    <span class="badge bg-secondary">Add Driver</span>
+</h2>
 
-<div class="container">
+<div class="container mt-3">
     <form class="row g-3 was-validated" method="POST" action="/add">
         <div class="col-6">
           <label for="inputfirstName" class="form-label">Driver FirstName</label>
