--- a/templates/base.html
+++ b/templates/base.html
@@ -5,27 +5,52 @@
         <title>{% block title %}{% endblock %}</title>
         <!-- Bootstrap CSS link -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        
+        <style>
+          /* 自定义 CSS 以实现水平居中的导航栏 */
+       
+      </style>
     </head>
 
     <body>
-         <nav>
-            <h1>Bankside Rakaia Motorkhana Mavens - Competition event</h1>
-            <ul>
-                <li><a href="{{ url_for('listdrivers') }}">List Drivers</a></li>
-                <li><a href="{{ url_for('listcourses') }}">List Courses</a></li>
-                <li><a href="{{ url_for('listruns') }}">List Runs</a></li>
-                <li><a href="{{ url_for('overallresult') }}">Overall Result</a></li>
-                <li><a href="{{ url_for('showgraph') }}">Top 5 Driver's Result Graph</a></li>
-
-                <li><a href="{{ url_for('admin') }}">Admin</a></li>
-            </ul>
+          <h1 class="text-center">Bankside Rakaia Motorkhana Mavens</h1>
+          <h2 class="text-center"> Competition event</h2>
+          <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container">
+              <div class="collapse navbar-collapse" >
+                <ul class="navbar-nav  mx-auto">
+                  <li class="nav-item  me-5">
+                    <a class="nav-link  active" aria-current="page" href="{{ url_for('home') }}">Home</a>
+                  </li>
+                  <li class="nav-item  me-5">
+                    <a class="nav-link" href="{{ url_for('listdrivers') }}">List Drivers</a>
+                  </li>
+                  <li class="nav-item  me-5">
+                    <a class="nav-link" href="{{ url_for('listcourses') }}">List Courses</a>
+                  </li>
+                  <li class="nav-item  me-5">
+                    <a class="nav-link" href="{{ url_for('listruns') }}">List Runs</a>
+                  </li>
+                  <li class="nav-item  me-5">
+                    <a class="nav-link" href="{{ url_for('overallresult') }}">Overall Result</a>
+                  </li>
+                  <li class="nav-item me-5">
+                    <a class="nav-link" href="{{ url_for('showgraph') }}">Top 5 Driver's Result Graph</a>
+                  </li>
+                  <!-- <li class="nav-item me-auto">
+                    <a class="btn btn-primary" rol="button" href="{{ url_for('admin') }}">Admin</a></li>
+                  </li> -->
+                  <a class="navbar-brand" href="{{ url_for('admin')}}">Admin</a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                      <span class="navbar-toggler-icon"></span>
+                  </button>
+                 </ul>
+              </div>
+            </div>
           </nav>
-
-         
+          
           <section class="content">
             <header>
-              {% block header %}{% endblock %}
+               {% block header %}{% endblock %}
             </header>
             {% for message in get_flashed_messages() %}
               <div class="flash">{{ message }}</div>
