--- a/templates/driverlist.html
+++ b/templates/driverlist.html
@@ -3,10 +3,13 @@
 <!-- driver_list is the variable passed in containing the list of drivers -->
 <!-- Add code to display a list of drivers -->
 
-<h2>Driver List</h2>
 
-<div class="container">
-    <table class="table table-striped">
+<h2 class="container mt-4">
+    <span class="badge bg-secondary"> Driver List</span>
+</h2>
+
+<div class="container mt-3">
+   <table class="table table-striped">
         <tr>
             <th scope="col">Driver</th>
             <th scope="col">Driver Name</th>
@@ -21,7 +24,7 @@
             <tr>
                 <td>{{ driver[0] }} </td>
                 {% if  driver[4]|int >= 12 and driver[4]|int <= 25 and driver[4]|int != 0 %}
-                    <td class="text-warning bg-dark">{{ driver[2] }} {{ driver[1] }}</td>
+                    <td ><a class="link-warning" href="{{ url_for('listruns',driverid = driver[0]) }}">{{ driver[2] }} {{ driver[1] }}</a></td>
                 {% else %}
                     <td ><a href="{{ url_for('listruns',driverid = driver[0]) }}">{{ driver[2] }} {{ driver[1] }}</a></td>
                 {% endif %}
