--- a/templates/search.html
+++ b/templates/search.html
@@ -1,20 +1,24 @@
 {% extends "admin.html" %}
 {% block content %}
 
-<h2>Search</h2>
+<h2 class="container mt-4">
+    <span class="badge bg-secondary">Search Driver</span>
+</h2>
 
-<div class="container">
+<div class="container mt-3">
     <form class="d-flex" role="search" method="POST" action="/search">
         <input class="form-control me-2" name="search_query" type="search" placeholder="Search">
         <button class="btn btn-outline-success" type="submit">Search</button>
     </form>
 
-    <table class="table table-striped">
+    <table class="table table-striped mt-4">
         <tr>
             <th scope="col">Driver</th>
             <th scope="col">Driver Name</th>
             <th scope="col">Date of Birth</th>
             <th scope="col">Age</th>
+            <th scope="col">Caregiver</th>
+            <th scope="col">Car</th>
         </tr>
         {% for driver in result_driver %}
             <tr>
