--- a/templates/success.html
+++ b/templates/success.html
@@ -1,10 +1,11 @@
 {% extends "message.html" %}
 {% block content %}
 
-<h2>Success Message</h2>
+<h2 class="container mt-4">
+    <span class="badge bg-secondary">Success Message</span>
+</h2>
 
-<!-- code to display list of courses-->
-<div class="container">
+<div class="container mt-3">
   
 
     <div class="alert alert-primary" role="alert">
