--- a/templates/update.html
+++ b/templates/update.html
@@ -1,11 +1,11 @@
 {% extends "admin.html" %}
 {% block content %}
 
-<h2>Driver Run Display</h2>
+<h2 class="container mt-4">
+    <span class="badge bg-secondary">Update Runs</span>
+</h2>
 
-
-
-<div class="container">
+<div class="container mt-3">
         <form class="row g-3 was-validated" method="POST" action="/update">
             <div class="col-md-4">
                 <label for="inputDrive" class="form-label">Driver</label>
