--- a/templates/addnewdriver.html
+++ b/templates/addnewdriver.html
@@ -16,12 +16,12 @@
             <input type="text" class="form-control" id="inputSurname" placeholder="" name="surname" required>
           </div>
 
-        <div class="col-6">
+        <!-- <div class="col-6">
           <label for="inputAge" class="form-label">Age</label>
           <input type="text" class="form-control" id="inputAge" name="age">
-        </div>
+        </div> -->
 
-        <div class="col-md-6">
+        <div class="col-md-12">
             <label for="inputCar" class="form-label">Car</label>
             <select id="inputCar" class="form-select" name="selected_car" required>
                 <option value="">Please Select a Car</option>
@@ -35,7 +35,7 @@
             <label for="dateInput" class="form-label">Date of Birth</label>
             <input type="date" class="form-control" id="dateInput" name="birthday">
             <div class="alert alert-warning">
-                Please enter your date of birth if you under 16.
+                Please enter your date of birth if you under 25.
             </div>
         </div>
 
