--- a/templates/overallresult.html
+++ b/templates/overallresult.html
@@ -29,7 +29,7 @@
                 <th scope="col">{{ display_result[i][0] }} </th>
             
             {% elif i > 0 and i <= 4 %}
-                <th scope="col">{{ display_result[i][0] }} md </th>
+                <th scope="col">{{ display_result[i][0] }} </th>
             {% else %}
                 <th scope="col">{{ display_result[i][0] }}  </th>
             {% endif %}
