--- a/templates/top5graph.html
+++ b/templates/top5graph.html
@@ -27,7 +27,7 @@
 
         // Define graph layout. Excluded a y-axis title as fruit names are self-explanatory.
         const layout = {  
-            xaxis: {range: [0, 250], title: "total run time"}, 
+            xaxis: {range: [240, 290], title: "overall result"}, 
             yaxis :{automargin: true, title: "driver name"},
             title: "Top 5 Driver"
         };
