--- a/templates/courselist.html
+++ b/templates/courselist.html
@@ -21,7 +21,7 @@
             <tr>
                 <td>{{ course[0] }} </td>
                 <td>{{ course[1] }}</td>
-                <td><img src="{{ url_for('static', filename=course[2]) }}" alt="course[2]" class="rounded float-end" >  </td>
+                <td><img src="{{ url_for('static', filename=course[2]) }}" alt="course[2]" class="rounded" >  </td>
             </tr>
         {% endfor %}
     </table>
