clean and formatted

--- a/templates/addnewdriver.html
+++ b/templates/addnewdriver.html
@@ -16,11 +16,6 @@
             <input type="text" class="form-control" id="inputSurname" placeholder="" name="surname" required>
           </div>
 
-        <!-- <div class="col-6">
-          <label for="inputAge" class="form-label">Age</label>
-          <input type="text" class="form-control" id="inputAge" name="age">
-        </div> -->
-
         <div class="col-md-12">
             <label for="inputCar" class="form-label">Car</label>
             <select id="inputCar" class="form-select" name="selected_car" required>
@@ -52,20 +47,10 @@
             </div>
         </div>
        
-        
-        
         <div class="col-12">
-          <button type="submit" class="btn btn-primary btn-lg">Submit</button>
+          <button type="submit" class="btn btn-outline-primary btn-lg">Submit</button>
         </div>
-        <!-- <div class="form-check mt-5">
-            <input type="checkbox" class="form-check-input" id="validationFormCheck1" required>
-            <label class="form-check-label" for="validationFormCheck1">Under 16 ?</label>
-            
-            <div class="invalid-feedback">
-                <label for="dateInput" class="form-label">Date of Birth</label>
-                <input type="date" class="form-control" id="dateInput" name="birthday">
-        </div> -->
-    </form>
+     </form>
 </div>
 
 {% endblock %}
