--- a/templates/courselist.html
+++ b/templates/courselist.html
@@ -5,10 +5,9 @@
     <span class="badge bg-secondary">Course List</span>
 </h2>
 <h3 class="container mt-1">
-    <span class="badge bg-secondary">current competition courses</span>
+    <span class="badge bg-secondary">Current competition courses</span>
 </h3>
 
-<!-- code to display list of courses-->
 <div class="container mt-3">
     <table class="table table-striped">
         <tr>
@@ -26,4 +25,5 @@
         {% endfor %}
     </table>
 </div>
+
 {% endblock %}
