--- a/templates/overallresult.html
+++ b/templates/overallresult.html
@@ -1,8 +1,5 @@
 {% extends "base.html" %}
 {% block content %}
-<!-- driver_list is the variable passed in containing the list of drivers -->
-<!-- Add code to display a list of drivers -->
-
 
 <h2 class="container mt-4">
     <span class="badge bg-secondary"> Overall result</span>
@@ -24,38 +21,32 @@
         </tr>
 
         {% for i in range (display_result|length) %} 
-          <tr>
+        <tr>
             {% if i == 0 %}
-                <th scope="col">{{ display_result[i][0] }} </th>
-            
+                <td scope="col">{{ display_result[i][0] }} </td>
             {% elif i > 0 and i <= 4 %}
-                <th scope="col">{{ display_result[i][0] }} </th>
+                <td scope="col">{{ display_result[i][0] }} </td>
             {% else %}
-                <th scope="col">{{ display_result[i][0] }}  </th>
+                <td scope="col">{{ display_result[i][0] }}  </td>
             {% endif %}
-            <th scope="col">{{ display_result[i][2] }}</th>
-            <th scope="col">{{ display_result[i][3] }}</th>
-            <th scope="col">{{ display_result[i][4] }}</th>
-            <th scope="col">{{ display_result[i][5] }}</th>
-            <th scope="col">{{ display_result[i][6] }}</th>
-            <th scope="col">{{ display_result[i][7] }}</th>
-            <th scope="col">{{ display_result[i][8] }}</th>
-            <th scope="col">{{ display_result[i][9] }}</th>
-            
-
+            <td scope="col">{{ display_result[i][2] }}</td>
+            <td scope="col">{{ display_result[i][3] }}</td>
+            <td scope="col">{{ display_result[i][4] }}</td>
+            <td scope="col">{{ display_result[i][5] }}</td>
+            <td scope="col">{{ display_result[i][6] }}</td>
+            <td scope="col">{{ display_result[i][7] }}</td>
+            <td scope="col">{{ display_result[i][8] }}</td>
+            <td scope="col">{{ display_result[i][9] }}</td>
+          
             {% if i == 0 %}
-            <th scope="col">{{  display_result[i][1] }} 🏆 </th>
-        
+            <td scope="col">{{  display_result[i][1] }} 🏆 </td>
             {% elif i > 0 and i <= 4 %}
-                <th scope="col">{{ display_result[i][1] }} 🎁 </th>
+                <td scope="col">{{ display_result[i][1] }} 🎁 </td>
             {% else %}
-                <th scope="col">{{ display_result[i][1] }}  </th>
+                <td scope="col">{{ display_result[i][1] }}  </td>
             {% endif %}
-                
-          </tr>
-
+        </tr>
         {% endfor%}
-      
     </table>
 </div>
 
